fixed card overflow

--- a/src/stylesheets/AnimeCard.css
+++ b/src/stylesheets/AnimeCard.css
@@ -18,7 +18,7 @@
 }
 
 img {
-  width: 15vw;
+  width: 14.6vw;
 }
 
 h5 {
